<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="?attr/colorOnSecondary"
    tools:context=".Fragments.AuthFragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorOnSecondary"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="?attr/colorSecondary"
                android:gravity="center"
                android:hint="@string/regist"
                android:textSize="34sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColorHint="?attr/colorSecondary"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/red"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/red"
                android:textColorHint="?attr/colorSecondary"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldGender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/colorSecondary"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/red"
                android:ems="10"
                android:inputType="textEmailAddress">

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Género"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Masculino" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Feminino" />
                </RadioGroup>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:textColorHint="?attr/colorSecondary"
                app:startIconTint="?attr/colorSecondary"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/red"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/birthDate"
                android:inputType="textEmailAddress"
                app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="?attr/colorSecondary"
                app:endIconTint="?attr/colorSecondary"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/red"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ConfirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/red"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                app:endIconMode="password_toggle"
                android:textColorHint="?attr/colorSecondary"
                app:endIconTint="?attr/colorSecondary"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/register" />


            <ProgressBar
                android:id="@+id/registerProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColorHint="?attr/colorSecondary"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>