<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorOnSecondary"
    tools:context=".Fragments.AuthFragments.ResetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="?attr/colorOnSecondary"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:tint="?attr/colorSecondary"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_gym" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:minHeight="48dp"
                android:text="@string/app_name"
                android:textSize="40dp"
                android:textColor="?attr/colorSecondary"
                android:textStyle="bold"
                app:boxStrokeColor="?attr/colorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFieldEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    app:errorIconTint="@color/red"
                    app:errorTextColor="@color/red"
                    app:boxStrokeErrorColor="@color/red"
                    android:layout_gravity="center"
                    android:textColorHint="?attr/colorSecondary"
                    app:boxStrokeColor="?attr/colorOnPrimary"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="15dp"
                    android:enabled="false"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="300dp"
                    android:textColor="?attr/colorOnSecondary"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/reset" />

                <ProgressBar
                    android:id="@+id/resetProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColorHint="?attr/colorSecondary"
                    app:boxStrokeColor="?attr/colorSecondary"
                    android:visibility="gone" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>